# longterm-stock-lab

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  backtest.py  build_universe.py  main.py  pyproject.toml  test_features.py  train.py
.github/workflows/: ci.yml  daily.yml  weekly_train.yml
.workflows/: ci.yml
config/: config.yaml  config.yml  holdings.example.csv  universe.csv  universe_extra.csv
data/: stocklab.db
models/: champion.json  champion_model.joblib  decisions.jsonl
models/archive/20260722_143812/: champion.json  champion_model.joblib
reports/: latest.md
reports/backtest/: 2026-07-20_elasticnet.md  2026-07-20_lasso.md  2026-07-20_linear.md  2026-07-20_ridge.md  2026-07-21_elasticnet.md  2026-07-21_lasso.md  2026-07-21_linear.md  2026-07-21_ridge.md  2026-07-22_elasticnet.md  2026-07-22_lasso.md  2026-07-22_linear.md  2026-07-22_ridge.md
reports/daily/: 2026-07-17.md  2026-07-21.md  2026-07-22.md  2026-07-23.md
reports/model_decision/: 2026-07-20.md  2026-07-21.md  2026-07-22.md
src/stocklab/: __init__.py  config.py  currency.py  inputs.py  logger.py  pipeline.py
src/stocklab/backtest/: __init__.py  engine.py  metrics.py
src/stocklab/data/: __init__.py  fetcher.py  market_calendar.py  storage.py  universe_builder.py
src/stocklab/features/: __init__.py  builder.py
src/stocklab/models/: __init__.py  registry.py  trainer.py
tests/: test_backtest_engine.py  test_currency.py  test_features.py  test_market_calendar.py  test_metrics.py  test_scorer.py  test_universe_builder.py  test_walk_forward.py
(+8 files in other folders)
